location and map spacing fixed

--- a/app/assets/stylesheets/pages/_show_group.scss
+++ b/app/assets/stylesheets/pages/_show_group.scss
@@ -134,6 +134,15 @@ h2 {
   padding-top: 15px;
 }
 
+.info-address {
+  color: $turquoise;
+  font-size: 13px;
+}
+
+.info-spacing {
+  padding-left: 50px;
+}
+
 // Join/Add
 
 .join-button {
